tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions18(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
unicodeExtendedEscapesInRegularExpressions18.ts(1,24): error TS1501: This regular expression flag is only available when targeting 'es6' or later.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== unicodeExtendedEscapesInRegularExpressions18.ts (1 errors) ====
    var x = /\u{65}\u{65}/gu;
                           ~
!!! error TS1501: This regular expression flag is only available when targeting 'es6' or later.
    